Laboratories/Lab_6/ex_1/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    EMPTY
    nl
    ws

Grammar

Rule 0     S' -> prog
Rule 1     prog -> decl_list stmt_list
Rule 2     decl_list -> decl_list decl
Rule 3     decl_list -> <empty>
Rule 4     decl -> type var_list S
Rule 5     decl -> type error S
Rule 6     type -> INT_TYPE
Rule 7     type -> DOUBLE_TYPE
Rule 8     m_copy -> empty
Rule 9     var_list -> var
Rule 10    var_list -> var_list CM m_copy var
Rule 11    var -> ID array
Rule 12    array -> empty
Rule 13    array -> array SO INT SC
Rule 14    stmt_list -> stmt_list stmt
Rule 15    stmt_list -> stmt
Rule 16    stmt_list -> error stmt
Rule 17    stmt -> if
Rule 18    stmt -> while
Rule 19    stmt -> assignment
Rule 20    stmt -> print
Rule 21    stmt -> BO stmt_list BC
Rule 22    assignment -> id S
Rule 23    assignment -> id EQ exp S
Rule 24    stmt -> BO stmt_list error BC
Rule 25    stmt -> BO error BC
Rule 26    stmt -> error S
Rule 27    assignment -> id EQ error S
Rule 28    assignment -> error EQ exp S
Rule 29    print -> PRINT id S
Rule 30    print -> PRINT error S
Rule 31    if -> IF if_condition nt0_if stmt ELSE nt1_if stmt
Rule 32    if -> IF if_condition nt0_if stmt
Rule 33    if -> IF if_condition nt0_if stmt error nt1_if stmt
Rule 34    if_condition -> RO exp RC
Rule 35    if_condition -> RO error RC
Rule 36    if_condition -> error exp RC
Rule 37    if_condition -> RO exp error
Rule 38    nt0_if -> empty
Rule 39    nt1_if -> empty
Rule 40    while -> WHILE while_condition nt0_while stmt
Rule 41    while_condition -> RO exp RC
Rule 42    while_condition -> RO error RC
Rule 43    while_condition -> error exp RC
Rule 44    while_condition -> RO exp error
Rule 45    nt0_while -> empty
Rule 46    exp -> exp AND exp
Rule 47    exp -> exp OR exp
Rule 48    exp -> NOT exp
Rule 49    exp -> exp EQ EQ exp
Rule 50    exp -> exp MIN exp
Rule 51    exp -> exp MAJ exp
Rule 52    exp -> exp MAJ_EQ exp
Rule 53    exp -> exp EQ_MAJ exp
Rule 54    exp -> exp MIN_EQ exp
Rule 55    exp -> exp EQ_MIN exp
Rule 56    exp -> exp PLUS exp
Rule 57    exp -> exp MINUS exp
Rule 58    exp -> exp STAR exp
Rule 59    exp -> exp DIV exp
Rule 60    exp -> RO exp RC
Rule 61    exp -> id
Rule 62    exp -> INT
Rule 63    exp -> DOUBLE
Rule 64    exp -> MINUS INT
Rule 65    exp -> MINUS DOUBLE
Rule 66    exp -> RO error RC
Rule 67    id -> ID
Rule 68    id -> ID SO INT SC
Rule 69    id -> ID SO ID SC
Rule 70    empty -> <empty>

Terminals, with rules where they appear

AND                  : 46
BC                   : 21 24 25
BO                   : 21 24 25
CM                   : 10
DIV                  : 59
DOUBLE               : 63 65
DOUBLE_TYPE          : 7
ELSE                 : 31
EMPTY                : 
EQ                   : 23 27 28 49 49
EQ_MAJ               : 53
EQ_MIN               : 55
ID                   : 11 67 68 69 69
IF                   : 31 32 33
INT                  : 13 62 64 68
INT_TYPE             : 6
MAJ                  : 51
MAJ_EQ               : 52
MIN                  : 50
MINUS                : 57 64 65
MIN_EQ               : 54
NOT                  : 48
OR                   : 47
PLUS                 : 56
PRINT                : 29 30
RC                   : 34 35 36 41 42 43 60 66
RO                   : 34 35 37 41 42 44 60 66
S                    : 4 5 22 23 26 27 28 29 30
SC                   : 13 68 69
SO                   : 13 68 69
STAR                 : 58
WHILE                : 40
error                : 5 16 24 25 26 27 28 30 33 35 36 37 42 43 44 66
nl                   : 
ws                   : 

Nonterminals, with rules where they appear

array                : 11 13
assignment           : 19
decl                 : 2
decl_list            : 1 2
empty                : 8 12 38 39 45
exp                  : 23 28 34 36 37 41 43 44 46 46 47 47 48 49 49 50 50 51 51 52 52 53 53 54 54 55 55 56 56 57 57 58 58 59 59 60
id                   : 22 23 27 29 61
if                   : 17
if_condition         : 31 32 33
m_copy               : 10
nt0_if               : 31 32 33
nt0_while            : 40
nt1_if               : 31 33
print                : 20
prog                 : 0
stmt                 : 14 15 16 31 31 32 33 33 40
stmt_list            : 1 14 21 24
type                 : 4 5
var                  : 9 10
var_list             : 4 10
while                : 18
while_condition      : 40

Parsing method: LALR

state 0

    (0) S' -> . prog
    (1) prog -> . decl_list stmt_list
    (2) decl_list -> . decl_list decl
    (3) decl_list -> .

    error           reduce using rule 3 (decl_list -> .)
    BO              reduce using rule 3 (decl_list -> .)
    INT_TYPE        reduce using rule 3 (decl_list -> .)
    DOUBLE_TYPE     reduce using rule 3 (decl_list -> .)
    IF              reduce using rule 3 (decl_list -> .)
    WHILE           reduce using rule 3 (decl_list -> .)
    PRINT           reduce using rule 3 (decl_list -> .)
    ID              reduce using rule 3 (decl_list -> .)

    prog                           shift and go to state 1
    decl_list                      shift and go to state 2

state 1

    (0) S' -> prog .



state 2

    (1) prog -> decl_list . stmt_list
    (2) decl_list -> decl_list . decl
    (14) stmt_list -> . stmt_list stmt
    (15) stmt_list -> . stmt
    (16) stmt_list -> . error stmt
    (4) decl -> . type var_list S
    (5) decl -> . type error S
    (17) stmt -> . if
    (18) stmt -> . while
    (19) stmt -> . assignment
    (20) stmt -> . print
    (21) stmt -> . BO stmt_list BC
    (24) stmt -> . BO stmt_list error BC
    (25) stmt -> . BO error BC
    (26) stmt -> . error S
    (6) type -> . INT_TYPE
    (7) type -> . DOUBLE_TYPE
    (31) if -> . IF if_condition nt0_if stmt ELSE nt1_if stmt
    (32) if -> . IF if_condition nt0_if stmt
    (33) if -> . IF if_condition nt0_if stmt error nt1_if stmt
    (40) while -> . WHILE while_condition nt0_while stmt
    (22) assignment -> . id S
    (23) assignment -> . id EQ exp S
    (27) assignment -> . id EQ error S
    (28) assignment -> . error EQ exp S
    (29) print -> . PRINT id S
    (30) print -> . PRINT error S
    (67) id -> . ID
    (68) id -> . ID SO INT SC
    (69) id -> . ID SO ID SC

    error           shift and go to state 6
    BO              shift and go to state 12
    INT_TYPE        shift and go to state 13
    DOUBLE_TYPE     shift and go to state 14
    IF              shift and go to state 15
    WHILE           shift and go to state 16
    PRINT           shift and go to state 18
    ID              shift and go to state 19

    stmt_list                      shift and go to state 3
    decl                           shift and go to state 4
    stmt                           shift and go to state 5
    type                           shift and go to state 7
    if                             shift and go to state 8
    while                          shift and go to state 9
    assignment                     shift and go to state 10
    print                          shift and go to state 11
    id                             shift and go to state 17

state 3

    (1) prog -> decl_list stmt_list .
    (14) stmt_list -> stmt_list . stmt
    (17) stmt -> . if
    (18) stmt -> . while
    (19) stmt -> . assignment
    (20) stmt -> . print
    (21) stmt -> . BO stmt_list BC
    (24) stmt -> . BO stmt_list error BC
    (25) stmt -> . BO error BC
    (26) stmt -> . error S
    (31) if -> . IF if_condition nt0_if stmt ELSE nt1_if stmt
    (32) if -> . IF if_condition nt0_if stmt
    (33) if -> . IF if_condition nt0_if stmt error nt1_if stmt
    (40) while -> . WHILE while_condition nt0_while stmt
    (22) assignment -> . id S
    (23) assignment -> . id EQ exp S
    (27) assignment -> . id EQ error S
    (28) assignment -> . error EQ exp S
    (29) print -> . PRINT id S
    (30) print -> . PRINT error S
    (67) id -> . ID
    (68) id -> . ID SO INT SC
    (69) id -> . ID SO ID SC

    $end            reduce using rule 1 (prog -> decl_list stmt_list .)
    BO              shift and go to state 12
    error           shift and go to state 21
    IF              shift and go to state 15
    WHILE           shift and go to state 16
    PRINT           shift and go to state 18
    ID              shift and go to state 19

    stmt                           shift and go to state 20
    if                             shift and go to state 8
    while                          shift and go to state 9
    assignment                     shift and go to state 10
    print                          shift and go to state 11
    id                             shift and go to state 17

state 4

    (2) decl_list -> decl_list decl .

    error           reduce using rule 2 (decl_list -> decl_list decl .)
    BO              reduce using rule 2 (decl_list -> decl_list decl .)
    INT_TYPE        reduce using rule 2 (decl_list -> decl_list decl .)
    DOUBLE_TYPE     reduce using rule 2 (decl_list -> decl_list decl .)
    IF              reduce using rule 2 (decl_list -> decl_list decl .)
    WHILE           reduce using rule 2 (decl_list -> decl_list decl .)
    PRINT           reduce using rule 2 (decl_list -> decl_list decl .)
    ID              reduce using rule 2 (decl_list -> decl_list decl .)


state 5

    (15) stmt_list -> stmt .

    BO              reduce using rule 15 (stmt_list -> stmt .)
    error           reduce using rule 15 (stmt_list -> stmt .)
    IF              reduce using rule 15 (stmt_list -> stmt .)
    WHILE           reduce using rule 15 (stmt_list -> stmt .)
    PRINT           reduce using rule 15 (stmt_list -> stmt .)
    ID              reduce using rule 15 (stmt_list -> stmt .)
    $end            reduce using rule 15 (stmt_list -> stmt .)
    BC              reduce using rule 15 (stmt_list -> stmt .)


state 6

    (16) stmt_list -> error . stmt
    (26) stmt -> error . S
    (28) assignment -> error . EQ exp S
    (17) stmt -> . if
    (18) stmt -> . while
    (19) stmt -> . assignment
    (20) stmt -> . print
    (21) stmt -> . BO stmt_list BC
    (24) stmt -> . BO stmt_list error BC
    (25) stmt -> . BO error BC
    (26) stmt -> . error S
    (31) if -> . IF if_condition nt0_if stmt ELSE nt1_if stmt
    (32) if -> . IF if_condition nt0_if stmt
    (33) if -> . IF if_condition nt0_if stmt error nt1_if stmt
    (40) while -> . WHILE while_condition nt0_while stmt
    (22) assignment -> . id S
    (23) assignment -> . id EQ exp S
    (27) assignment -> . id EQ error S
    (28) assignment -> . error EQ exp S
    (29) print -> . PRINT id S
    (30) print -> . PRINT error S
    (67) id -> . ID
    (68) id -> . ID SO INT SC
    (69) id -> . ID SO ID SC

    S               shift and go to state 23
    EQ              shift and go to state 24
    BO              shift and go to state 12
    error           shift and go to state 21
    IF              shift and go to state 15
    WHILE           shift and go to state 16
    PRINT           shift and go to state 18
    ID              shift and go to state 19

    stmt                           shift and go to state 22
    if                             shift and go to state 8
    while                          shift and go to state 9
    assignment                     shift and go to state 10
    print                          shift and go to state 11
    id                             shift and go to state 17

state 7

    (4) decl -> type . var_list S
    (5) decl -> type . error S
    (9) var_list -> . var
    (10) var_list -> . var_list CM m_copy var
    (11) var -> . ID array

    error           shift and go to state 26
    ID              shift and go to state 28

    var_list                       shift and go to state 25
    var                            shift and go to state 27

state 8

    (17) stmt -> if .

    BO              reduce using rule 17 (stmt -> if .)
    error           reduce using rule 17 (stmt -> if .)
    IF              reduce using rule 17 (stmt -> if .)
    WHILE           reduce using rule 17 (stmt -> if .)
    PRINT           reduce using rule 17 (stmt -> if .)
    ID              reduce using rule 17 (stmt -> if .)
    $end            reduce using rule 17 (stmt -> if .)
    BC              reduce using rule 17 (stmt -> if .)
    ELSE            reduce using rule 17 (stmt -> if .)


state 9

    (18) stmt -> while .

    BO              reduce using rule 18 (stmt -> while .)
    error           reduce using rule 18 (stmt -> while .)
    IF              reduce using rule 18 (stmt -> while .)
    WHILE           reduce using rule 18 (stmt -> while .)
    PRINT           reduce using rule 18 (stmt -> while .)
    ID              reduce using rule 18 (stmt -> while .)
    $end            reduce using rule 18 (stmt -> while .)
    BC              reduce using rule 18 (stmt -> while .)
    ELSE            reduce using rule 18 (stmt -> while .)


state 10

    (19) stmt -> assignment .

    BO              reduce using rule 19 (stmt -> assignment .)
    error           reduce using rule 19 (stmt -> assignment .)
    IF              reduce using rule 19 (stmt -> assignment .)
    WHILE           reduce using rule 19 (stmt -> assignment .)
    PRINT           reduce using rule 19 (stmt -> assignment .)
    ID              reduce using rule 19 (stmt -> assignment .)
    $end            reduce using rule 19 (stmt -> assignment .)
    BC              reduce using rule 19 (stmt -> assignment .)
    ELSE            reduce using rule 19 (stmt -> assignment .)


state 11

    (20) stmt -> print .

    BO              reduce using rule 20 (stmt -> print .)
    error           reduce using rule 20 (stmt -> print .)
    IF              reduce using rule 20 (stmt -> print .)
    WHILE           reduce using rule 20 (stmt -> print .)
    PRINT           reduce using rule 20 (stmt -> print .)
    ID              reduce using rule 20 (stmt -> print .)
    $end            reduce using rule 20 (stmt -> print .)
    BC              reduce using rule 20 (stmt -> print .)
    ELSE            reduce using rule 20 (stmt -> print .)


state 12

    (21) stmt -> BO . stmt_list BC
    (24) stmt -> BO . stmt_list error BC
    (25) stmt -> BO . error BC
    (14) stmt_list -> . stmt_list stmt
    (15) stmt_list -> . stmt
    (16) stmt_list -> . error stmt
    (17) stmt -> . if
    (18) stmt -> . while
    (19) stmt -> . assignment
    (20) stmt -> . print
    (21) stmt -> . BO stmt_list BC
    (24) stmt -> . BO stmt_list error BC
    (25) stmt -> . BO error BC
    (26) stmt -> . error S
    (31) if -> . IF if_condition nt0_if stmt ELSE nt1_if stmt
    (32) if -> . IF if_condition nt0_if stmt
    (33) if -> . IF if_condition nt0_if stmt error nt1_if stmt
    (40) while -> . WHILE while_condition nt0_while stmt
    (22) assignment -> . id S
    (23) assignment -> . id EQ exp S
    (27) assignment -> . id EQ error S
    (28) assignment -> . error EQ exp S
    (29) print -> . PRINT id S
    (30) print -> . PRINT error S
    (67) id -> . ID
    (68) id -> . ID SO INT SC
    (69) id -> . ID SO ID SC

    error           shift and go to state 30
    BO              shift and go to state 12
    IF              shift and go to state 15
    WHILE           shift and go to state 16
    PRINT           shift and go to state 18
    ID              shift and go to state 19

    stmt_list                      shift and go to state 29
    stmt                           shift and go to state 5
    if                             shift and go to state 8
    while                          shift and go to state 9
    assignment                     shift and go to state 10
    print                          shift and go to state 11
    id                             shift and go to state 17

state 13

    (6) type -> INT_TYPE .

    error           reduce using rule 6 (type -> INT_TYPE .)
    ID              reduce using rule 6 (type -> INT_TYPE .)


state 14

    (7) type -> DOUBLE_TYPE .

    error           reduce using rule 7 (type -> DOUBLE_TYPE .)
    ID              reduce using rule 7 (type -> DOUBLE_TYPE .)


state 15

    (31) if -> IF . if_condition nt0_if stmt ELSE nt1_if stmt
    (32) if -> IF . if_condition nt0_if stmt
    (33) if -> IF . if_condition nt0_if stmt error nt1_if stmt
    (34) if_condition -> . RO exp RC
    (35) if_condition -> . RO error RC
    (36) if_condition -> . error exp RC
    (37) if_condition -> . RO exp error

    RO              shift and go to state 33
    error           shift and go to state 32

    if_condition                   shift and go to state 31

state 16

    (40) while -> WHILE . while_condition nt0_while stmt
    (41) while_condition -> . RO exp RC
    (42) while_condition -> . RO error RC
    (43) while_condition -> . error exp RC
    (44) while_condition -> . RO exp error

    RO              shift and go to state 35
    error           shift and go to state 36

    while_condition                shift and go to state 34

state 17

    (22) assignment -> id . S
    (23) assignment -> id . EQ exp S
    (27) assignment -> id . EQ error S

    S               shift and go to state 37
    EQ              shift and go to state 38


state 18

    (29) print -> PRINT . id S
    (30) print -> PRINT . error S
    (67) id -> . ID
    (68) id -> . ID SO INT SC
    (69) id -> . ID SO ID SC

    error           shift and go to state 40
    ID              shift and go to state 19

    id                             shift and go to state 39

state 19

    (67) id -> ID .
    (68) id -> ID . SO INT SC
    (69) id -> ID . SO ID SC

    S               reduce using rule 67 (id -> ID .)
    EQ              reduce using rule 67 (id -> ID .)
    AND             reduce using rule 67 (id -> ID .)
    OR              reduce using rule 67 (id -> ID .)
    MIN             reduce using rule 67 (id -> ID .)
    MAJ             reduce using rule 67 (id -> ID .)
    MAJ_EQ          reduce using rule 67 (id -> ID .)
    EQ_MAJ          reduce using rule 67 (id -> ID .)
    MIN_EQ          reduce using rule 67 (id -> ID .)
    EQ_MIN          reduce using rule 67 (id -> ID .)
    PLUS            reduce using rule 67 (id -> ID .)
    MINUS           reduce using rule 67 (id -> ID .)
    STAR            reduce using rule 67 (id -> ID .)
    DIV             reduce using rule 67 (id -> ID .)
    RC              reduce using rule 67 (id -> ID .)
    error           reduce using rule 67 (id -> ID .)
    SO              shift and go to state 41


state 20

    (14) stmt_list -> stmt_list stmt .

    BO              reduce using rule 14 (stmt_list -> stmt_list stmt .)
    error           reduce using rule 14 (stmt_list -> stmt_list stmt .)
    IF              reduce using rule 14 (stmt_list -> stmt_list stmt .)
    WHILE           reduce using rule 14 (stmt_list -> stmt_list stmt .)
    PRINT           reduce using rule 14 (stmt_list -> stmt_list stmt .)
    ID              reduce using rule 14 (stmt_list -> stmt_list stmt .)
    $end            reduce using rule 14 (stmt_list -> stmt_list stmt .)
    BC              reduce using rule 14 (stmt_list -> stmt_list stmt .)


state 21

    (26) stmt -> error . S
    (28) assignment -> error . EQ exp S

    S               shift and go to state 23
    EQ              shift and go to state 24


state 22

    (16) stmt_list -> error stmt .

    BO              reduce using rule 16 (stmt_list -> error stmt .)
    error           reduce using rule 16 (stmt_list -> error stmt .)
    IF              reduce using rule 16 (stmt_list -> error stmt .)
    WHILE           reduce using rule 16 (stmt_list -> error stmt .)
    PRINT           reduce using rule 16 (stmt_list -> error stmt .)
    ID              reduce using rule 16 (stmt_list -> error stmt .)
    $end            reduce using rule 16 (stmt_list -> error stmt .)
    BC              reduce using rule 16 (stmt_list -> error stmt .)


state 23

    (26) stmt -> error S .

    BO              reduce using rule 26 (stmt -> error S .)
    error           reduce using rule 26 (stmt -> error S .)
    IF              reduce using rule 26 (stmt -> error S .)
    WHILE           reduce using rule 26 (stmt -> error S .)
    PRINT           reduce using rule 26 (stmt -> error S .)
    ID              reduce using rule 26 (stmt -> error S .)
    $end            reduce using rule 26 (stmt -> error S .)
    BC              reduce using rule 26 (stmt -> error S .)
    ELSE            reduce using rule 26 (stmt -> error S .)


state 24

    (28) assignment -> error EQ . exp S
    (46) exp -> . exp AND exp
    (47) exp -> . exp OR exp
    (48) exp -> . NOT exp
    (49) exp -> . exp EQ EQ exp
    (50) exp -> . exp MIN exp
    (51) exp -> . exp MAJ exp
    (52) exp -> . exp MAJ_EQ exp
    (53) exp -> . exp EQ_MAJ exp
    (54) exp -> . exp MIN_EQ exp
    (55) exp -> . exp EQ_MIN exp
    (56) exp -> . exp PLUS exp
    (57) exp -> . exp MINUS exp
    (58) exp -> . exp STAR exp
    (59) exp -> . exp DIV exp
    (60) exp -> . RO exp RC
    (61) exp -> . id
    (62) exp -> . INT
    (63) exp -> . DOUBLE
    (64) exp -> . MINUS INT
    (65) exp -> . MINUS DOUBLE
    (66) exp -> . RO error RC
    (67) id -> . ID
    (68) id -> . ID SO INT SC
    (69) id -> . ID SO ID SC

    NOT             shift and go to state 43
    RO              shift and go to state 45
    INT             shift and go to state 47
    DOUBLE          shift and go to state 48
    MINUS           shift and go to state 44
    ID              shift and go to state 19

    exp                            shift and go to state 42
    id                             shift and go to state 46

state 25

    (4) decl -> type var_list . S
    (10) var_list -> var_list . CM m_copy var

    S               shift and go to state 49
    CM              shift and go to state 50


state 26

    (5) decl -> type error . S

    S               shift and go to state 51


state 27

    (9) var_list -> var .

    S               reduce using rule 9 (var_list -> var .)
    CM              reduce using rule 9 (var_list -> var .)


state 28

    (11) var -> ID . array
    (12) array -> . empty
    (13) array -> . array SO INT SC
    (70) empty -> .

    SO              reduce using rule 70 (empty -> .)
    S               reduce using rule 70 (empty -> .)
    CM              reduce using rule 70 (empty -> .)

    array                          shift and go to state 52
    empty                          shift and go to state 53

state 29

    (21) stmt -> BO stmt_list . BC
    (24) stmt -> BO stmt_list . error BC
    (14) stmt_list -> stmt_list . stmt
    (17) stmt -> . if
    (18) stmt -> . while
    (19) stmt -> . assignment
    (20) stmt -> . print
    (21) stmt -> . BO stmt_list BC
    (24) stmt -> . BO stmt_list error BC
    (25) stmt -> . BO error BC
    (26) stmt -> . error S
    (31) if -> . IF if_condition nt0_if stmt ELSE nt1_if stmt
    (32) if -> . IF if_condition nt0_if stmt
    (33) if -> . IF if_condition nt0_if stmt error nt1_if stmt
    (40) while -> . WHILE while_condition nt0_while stmt
    (22) assignment -> . id S
    (23) assignment -> . id EQ exp S
    (27) assignment -> . id EQ error S
    (28) assignment -> . error EQ exp S
    (29) print -> . PRINT id S
    (30) print -> . PRINT error S
    (67) id -> . ID
    (68) id -> . ID SO INT SC
    (69) id -> . ID SO ID SC

    BC              shift and go to state 54
    error           shift and go to state 55
    BO              shift and go to state 12
    IF              shift and go to state 15
    WHILE           shift and go to state 16
    PRINT           shift and go to state 18
    ID              shift and go to state 19

    stmt                           shift and go to state 20
    if                             shift and go to state 8
    while                          shift and go to state 9
    assignment                     shift and go to state 10
    print                          shift and go to state 11
    id                             shift and go to state 17

state 30

    (25) stmt -> BO error . BC
    (16) stmt_list -> error . stmt
    (26) stmt -> error . S
    (28) assignment -> error . EQ exp S
    (17) stmt -> . if
    (18) stmt -> . while
    (19) stmt -> . assignment
    (20) stmt -> . print
    (21) stmt -> . BO stmt_list BC
    (24) stmt -> . BO stmt_list error BC
    (25) stmt -> . BO error BC
    (26) stmt -> . error S
    (31) if -> . IF if_condition nt0_if stmt ELSE nt1_if stmt
    (32) if -> . IF if_condition nt0_if stmt
    (33) if -> . IF if_condition nt0_if stmt error nt1_if stmt
    (40) while -> . WHILE while_condition nt0_while stmt
    (22) assignment -> . id S
    (23) assignment -> . id EQ exp S
    (27) assignment -> . id EQ error S
    (28) assignment -> . error EQ exp S
    (29) print -> . PRINT id S
    (30) print -> . PRINT error S
    (67) id -> . ID
    (68) id -> . ID SO INT SC
    (69) id -> . ID SO ID SC

    BC              shift and go to state 56
    S               shift and go to state 23
    EQ              shift and go to state 24
    BO              shift and go to state 12
    error           shift and go to state 21
    IF              shift and go to state 15
    WHILE           shift and go to state 16
    PRINT           shift and go to state 18
    ID              shift and go to state 19

    stmt                           shift and go to state 22
    if                             shift and go to state 8
    while                          shift and go to state 9
    assignment                     shift and go to state 10
    print                          shift and go to state 11
    id                             shift and go to state 17

state 31

    (31) if -> IF if_condition . nt0_if stmt ELSE nt1_if stmt
    (32) if -> IF if_condition . nt0_if stmt
    (33) if -> IF if_condition . nt0_if stmt error nt1_if stmt
    (38) nt0_if -> . empty
    (70) empty -> .

    BO              reduce using rule 70 (empty -> .)
    error           reduce using rule 70 (empty -> .)
    IF              reduce using rule 70 (empty -> .)
    WHILE           reduce using rule 70 (empty -> .)
    PRINT           reduce using rule 70 (empty -> .)
    ID              reduce using rule 70 (empty -> .)

    nt0_if                         shift and go to state 57
    empty                          shift and go to state 58

state 32

    (36) if_condition -> error . exp RC
    (46) exp -> . exp AND exp
    (47) exp -> . exp OR exp
    (48) exp -> . NOT exp
    (49) exp -> . exp EQ EQ exp
    (50) exp -> . exp MIN exp
    (51) exp -> . exp MAJ exp
    (52) exp -> . exp MAJ_EQ exp
    (53) exp -> . exp EQ_MAJ exp
    (54) exp -> . exp MIN_EQ exp
    (55) exp -> . exp EQ_MIN exp
    (56) exp -> . exp PLUS exp
    (57) exp -> . exp MINUS exp
    (58) exp -> . exp STAR exp
    (59) exp -> . exp DIV exp
    (60) exp -> . RO exp RC
    (61) exp -> . id
    (62) exp -> . INT
    (63) exp -> . DOUBLE
    (64) exp -> . MINUS INT
    (65) exp -> . MINUS DOUBLE
    (66) exp -> . RO error RC
    (67) id -> . ID
    (68) id -> . ID SO INT SC
    (69) id -> . ID SO ID SC

    NOT             shift and go to state 43
    RO              shift and go to state 45
    INT             shift and go to state 47
    DOUBLE          shift and go to state 48
    MINUS           shift and go to state 44
    ID              shift and go to state 19

    exp                            shift and go to state 59
    id                             shift and go to state 46

state 33

    (34) if_condition -> RO . exp RC
    (35) if_condition -> RO . error RC
    (37) if_condition -> RO . exp error
    (46) exp -> . exp AND exp
    (47) exp -> . exp OR exp
    (48) exp -> . NOT exp
    (49) exp -> . exp EQ EQ exp
    (50) exp -> . exp MIN exp
    (51) exp -> . exp MAJ exp
    (52) exp -> . exp MAJ_EQ exp
    (53) exp -> . exp EQ_MAJ exp
    (54) exp -> . exp MIN_EQ exp
    (55) exp -> . exp EQ_MIN exp
    (56) exp -> . exp PLUS exp
    (57) exp -> . exp MINUS exp
    (58) exp -> . exp STAR exp
    (59) exp -> . exp DIV exp
    (60) exp -> . RO exp RC
    (61) exp -> . id
    (62) exp -> . INT
    (63) exp -> . DOUBLE
    (64) exp -> . MINUS INT
    (65) exp -> . MINUS DOUBLE
    (66) exp -> . RO error RC
    (67) id -> . ID
    (68) id -> . ID SO INT SC
    (69) id -> . ID SO ID SC

    error           shift and go to state 61
    NOT             shift and go to state 43
    RO              shift and go to state 45
    INT             shift and go to state 47
    DOUBLE          shift and go to state 48
    MINUS           shift and go to state 44
    ID              shift and go to state 19

    exp                            shift and go to state 60
    id                             shift and go to state 46

state 34

    (40) while -> WHILE while_condition . nt0_while stmt
    (45) nt0_while -> . empty
    (70) empty -> .

    BO              reduce using rule 70 (empty -> .)
    error           reduce using rule 70 (empty -> .)
    IF              reduce using rule 70 (empty -> .)
    WHILE           reduce using rule 70 (empty -> .)
    PRINT           reduce using rule 70 (empty -> .)
    ID              reduce using rule 70 (empty -> .)

    nt0_while                      shift and go to state 62
    empty                          shift and go to state 63

state 35

    (41) while_condition -> RO . exp RC
    (42) while_condition -> RO . error RC
    (44) while_condition -> RO . exp error
    (46) exp -> . exp AND exp
    (47) exp -> . exp OR exp
    (48) exp -> . NOT exp
    (49) exp -> . exp EQ EQ exp
    (50) exp -> . exp MIN exp
    (51) exp -> . exp MAJ exp
    (52) exp -> . exp MAJ_EQ exp
    (53) exp -> . exp EQ_MAJ exp
    (54) exp -> . exp MIN_EQ exp
    (55) exp -> . exp EQ_MIN exp
    (56) exp -> . exp PLUS exp
    (57) exp -> . exp MINUS exp
    (58) exp -> . exp STAR exp
    (59) exp -> . exp DIV exp
    (60) exp -> . RO exp RC
    (61) exp -> . id
    (62) exp -> . INT
    (63) exp -> . DOUBLE
    (64) exp -> . MINUS INT
    (65) exp -> . MINUS DOUBLE
    (66) exp -> . RO error RC
    (67) id -> . ID
    (68) id -> . ID SO INT SC
    (69) id -> . ID SO ID SC

    error           shift and go to state 65
    NOT             shift and go to state 43
    RO              shift and go to state 45
    INT             shift and go to state 47
    DOUBLE          shift and go to state 48
    MINUS           shift and go to state 44
    ID              shift and go to state 19

    exp                            shift and go to state 64
    id                             shift and go to state 46

state 36

    (43) while_condition -> error . exp RC
    (46) exp -> . exp AND exp
    (47) exp -> . exp OR exp
    (48) exp -> . NOT exp
    (49) exp -> . exp EQ EQ exp
    (50) exp -> . exp MIN exp
    (51) exp -> . exp MAJ exp
    (52) exp -> . exp MAJ_EQ exp
    (53) exp -> . exp EQ_MAJ exp
    (54) exp -> . exp MIN_EQ exp
    (55) exp -> . exp EQ_MIN exp
    (56) exp -> . exp PLUS exp
    (57) exp -> . exp MINUS exp
    (58) exp -> . exp STAR exp
    (59) exp -> . exp DIV exp
    (60) exp -> . RO exp RC
    (61) exp -> . id
    (62) exp -> . INT
    (63) exp -> . DOUBLE
    (64) exp -> . MINUS INT
    (65) exp -> . MINUS DOUBLE
    (66) exp -> . RO error RC
    (67) id -> . ID
    (68) id -> . ID SO INT SC
    (69) id -> . ID SO ID SC

    NOT             shift and go to state 43
    RO              shift and go to state 45
    INT             shift and go to state 47
    DOUBLE          shift and go to state 48
    MINUS           shift and go to state 44
    ID              shift and go to state 19

    exp                            shift and go to state 66
    id                             shift and go to state 46

state 37

    (22) assignment -> id S .

    BO              reduce using rule 22 (assignment -> id S .)
    error           reduce using rule 22 (assignment -> id S .)
    IF              reduce using rule 22 (assignment -> id S .)
    WHILE           reduce using rule 22 (assignment -> id S .)
    PRINT           reduce using rule 22 (assignment -> id S .)
    ID              reduce using rule 22 (assignment -> id S .)
    $end            reduce using rule 22 (assignment -> id S .)
    BC              reduce using rule 22 (assignment -> id S .)
    ELSE            reduce using rule 22 (assignment -> id S .)


state 38

    (23) assignment -> id EQ . exp S
    (27) assignment -> id EQ . error S
    (46) exp -> . exp AND exp
    (47) exp -> . exp OR exp
    (48) exp -> . NOT exp
    (49) exp -> . exp EQ EQ exp
    (50) exp -> . exp MIN exp
    (51) exp -> . exp MAJ exp
    (52) exp -> . exp MAJ_EQ exp
    (53) exp -> . exp EQ_MAJ exp
    (54) exp -> . exp MIN_EQ exp
    (55) exp -> . exp EQ_MIN exp
    (56) exp -> . exp PLUS exp
    (57) exp -> . exp MINUS exp
    (58) exp -> . exp STAR exp
    (59) exp -> . exp DIV exp
    (60) exp -> . RO exp RC
    (61) exp -> . id
    (62) exp -> . INT
    (63) exp -> . DOUBLE
    (64) exp -> . MINUS INT
    (65) exp -> . MINUS DOUBLE
    (66) exp -> . RO error RC
    (67) id -> . ID
    (68) id -> . ID SO INT SC
    (69) id -> . ID SO ID SC

    error           shift and go to state 68
    NOT             shift and go to state 43
    RO              shift and go to state 45
    INT             shift and go to state 47
    DOUBLE          shift and go to state 48
    MINUS           shift and go to state 44
    ID              shift and go to state 19

    id                             shift and go to state 46
    exp                            shift and go to state 67

state 39

    (29) print -> PRINT id . S

    S               shift and go to state 69


state 40

    (30) print -> PRINT error . S

    S               shift and go to state 70


state 41

    (68) id -> ID SO . INT SC
    (69) id -> ID SO . ID SC

    INT             shift and go to state 72
    ID              shift and go to state 71


state 42
